[tool.poetry]
name = "aquacropgymnasium"
version = "0.1.0"
description = ""
authors = ["Muhammad Alkaff <m.alkaff@ulm.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aquacrop = "^3.0.9"
gymnasium = "^0.29.1"
stable-baselines3 = "^2.3.2"
tensorboard = "^2.18.0"
optuna = "^4.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
